# chromesession

./: .gitignore  .pre-commit-config.yaml  README.md  bs4.html  chromesession.html  index.html  pyproject.toml  requests.html  selenium.html  tox.ini  warnings.json
.github/workflows/: publish.yml  pytest.yml
chromesession/: __init__.py  chromium.py  session.py  utils.py
docs/: __main__.py
docs/dark-mode/: index.html.jinja2
examples/: example1.py  example2.py
requests/: __version__.html  _internal_utils.html  adapters.html  api.html  auth.html  certs.html  compat.html  cookies.html  exceptions.html  help.html  hooks.html  models.html  packages.html  sessions.html  status_codes.html  structures.html  utils.html
requests_cache/: session.html
selenium/: common.html  types.html  webdriver.html
selenium/webdriver/chromium/: webdriver.html
tests/: __init__.py  conftest.py  test_chromium.py  test_session.py  test_utils.py
