[build-system]
build-backend = "poetry.core.masonry.api"

requires = [ "poetry-core" ]

[tool.poetry]
name = "chromesession"
version = "0.0.0"
description = "contextmanager for managing `selenium` chrome sessions with caching."
authors = [ "Christoph Dörrer <d-chris@web.de>" ]
license = "MIT"
readme = "README.md"
classifiers = [
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
keywords = [ "selenium", "requests-cache", "chromedriver-py", "responses" ]

[tool.poetry.urls]
repository = "https://github.com/d-chris/chromesession"
documentation = "https://d-chris.github.io/chromesession"

[tool.poetry.dependencies]
python = "^3.9"
requests-cache = "^1.2.1"
responses = "^0.25.7"
selenium = "^4.29.0"
chromedriver-py = { version = "^134.0.6998.88", optional = true }

[tool.poetry.extras]
driver = [ "chromedriver-py" ]

[tool.poetry.group.dev.dependencies]
beautifulsoup4 = "^4.13.3"

[tool.poetry.group.docs.dependencies]
pdoc = ">=14.0.0"
pathlibutil = "^0.3.5"

[tool.isort]
profile = "black"
